# taglib-node-binding

./: .eslintignore  .eslintrc.json  .gitignore  .npmignore  CMakeLists.txt  README.md  binding.gyp  build.js  npmpublish.yml  package-lock.json  package.json
.github/workflows/: npmpublish.yml
config/: common.cmake  napi.cmake  taglib.cmake
lib/: binding.ts
lib/TagLib/: FileRef.ts  Properties.ts  Tag.ts
src/: fileref.cc  fileref.h  properties.cc  properties.h  tag.cc  tag.h  taglib.cc
test/: test_binding.js
test/audio/: AAC.m4a  FLAC.flac  OPUS.opus
